fix nav logo being hidden on mobile responsive and adjust burger menu fade

--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ section:first-of-type{
     border-radius: 1rem;
 }
 @media screen and (max-width: 550px){
-    .header .container .header__wrapper img{
+    .header .container .header__wrapper a{
         z-index: 9999;
     }   /* additional to display logo and toggle menu when nav is centered for responsive */
     .header .container .header__wrapper .toggle__menu{
@@ -259,29 +259,29 @@ section:first-of-type{
     /* OPEN NAVIGATION */
     .toggle__menu.open span:nth-child(1){
         transform: translate(0, 11px) rotate(230deg);
-        transition: 0.5s ease;
+        transition: 0.75s ease;
     }
     .toggle__menu.open span:nth-child(2){
         opacity: 0;
-        transition: 0.5s ease;
+        transition: 0.25s ease;
     }
     .toggle__menu.open span:nth-child(3){
         transform: translate(0, -7px) rotate(-230deg);
-        transition: 0.5s ease;
+        transition: 0.75s ease;
     }
 
     /* CLOSE NAVIGATION */
     .toggle__menu span:nth-child(1){
         transform: translate(0, 0px) rotate(0deg);
-        transition: 0.5s ease;
+        transition: 0.75s ease;
     }
     .toggle__menu span:nth-child(2){
         opacity: 1;
-        transition: 0.5s ease;
+        transition: 1.5s ease;
     }
     .toggle__menu span:nth-child(3){
         transform: translate(0, 0px) rotate(0deg);
-        transition: 0.5s ease;
+        transition: 0.75s ease;
     }
 }
 
